# forensic-adb

./: AGENTS.md  CLAUDE.md  Cargo.toml
examples/: hello-world.rs
src/: lib.rs  test.rs
