[package]
name = "forensic-adb"
version = "0.7.0"
authors = ["Mozilla", "kpcyrd <git@rxv.cc>"]
description = "Tokio based client library for the Android Debug Bridge (adb) based on mozdevice"
keywords = ["adb", "android"]
license = "MPL-2.0"
repository = "https://github.com/kpcyrd/forensic-adb"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
bstr = "1.9.1"
futures-core = "0.3.30"
log = { version = "0.4", features = ["std"] }
once_cell = "1.4.0"
regex = { version = "1", default-features = false, features = ["perf", "std"] }
tempfile = "3"
thiserror = "1.0.25"
tokio = { version = "1.26.0", features = ["net", "fs", "io-util", "process", "sync"] }
unix_path = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
futures = "0.3.27"
serial_test = "3.1.1"
serial_test_derive = "3.1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
